appId: gg.praetorium
---
- launchApp:
    stopApp: false
- tapOn: Praetorium home
- assertVisible: '(?i)Native saved army.*'
- assertNotVisible: Refresh now
- takeScreenshot: native-app-saved
